--- a/app/views/balades.ejs
+++ b/app/views/balades.ejs
@@ -1,7 +1,7 @@
 <%- include('partials/header.ejs') %>
 <div class="container-balad" aria-label="container">
 <% for (const post of posts) { %>
-    <a class=" container-balad__article" href="/<%= post.slug %>"><article aria-label="link to a balad">
+    <a class=" container-balad__article" href="/balades/<%= post.slug %>"><article aria-label="link to a balad">
         <p>Posté le : <%= post.created_at.toDateString() %> modifié le : <%= post.updated_at ? post.updated_at.toDateString() : "jamais"%></p>
         <h3><%= post.title %></h3>
         <h5><%= post.name %></h5>
